# hacs-cfl-commute

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: hacs.yaml  hassfest.yaml  release.yaml  tests.yaml
custom_components/cfl_commute/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  util.py
custom_components/cfl_commute/translations/: en.json
custom_components/my_rail_commute/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  helpers.py  manifest.json  sensor.py  services.yaml
custom_components/my_rail_commute/translations/: en.json
docs/superpowers/plans/: 2026-03-17-cfl-commute-plan.md  2026-03-17-lovelace-cfl-commute-card-plan.md
docs/superpowers/specs/: 2026-03-17-cfl-commute-design.md
lovelace-cfl-commute-card/: README.md
scripts/: setup_ha_docker.sh
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_flags_store.py  test_integration.py  test_sensor.py  test_sensor_platform_changes.py  test_setup_flow.py  update_integration.py
tests/fixtures/: departure_board_cancelled.json  departure_board_delayed.json  departure_board_on_time.json
