[project]
name = "my-rail-commute"
version = "1.1.4"
description = "Home Assistant custom integration for UK National Rail commutes"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".github",
    ".vscode",
    "testing_config",
]
pythonpath = ["."]

# Coverage configuration
addopts = [
    "--cov=custom_components.my_rail_commute",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "-v",
    "--tb=short",
]

# Test discovery
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["custom_components.my_rail_commute"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]
show_missing = true
fail_under = 40

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
